--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,18 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-
 config/database.yml
-
 config/credentials.yml.enc
 
 test
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
